--- a/src/theme.css
+++ b/src/theme.css
@@ -2,11 +2,12 @@ html {
     --font-color:                     black;
     --highlight-background-color:     rgba(235, 235, 235, 1.0);
 
-    --header-normal-background-color: rgba(017,111,159, 1.0);
+    --header-normal-background-color: rgba(155, 21, 132, 1.0);
     --header-normal-font-color:       rgba(255,255,255, 0.8);
     --header-active-background-color: rgba(255,255,255, 0.2);
     --header-active-font-color:       rgba(255,255,255, 0.9);
 
+    --menu-content-border-color:    rgba(11,22,100,1);
     --overview-heading-background-color: rgb(230,230,230);
     --overview-heading-font-color:       rgb(78,81,116);
     --overview-list-hover-color:         rgba(0,0,0, 0.05);
