--- a/src/game-overview/game-overview.css
+++ b/src/game-overview/game-overview.css
@@ -1,3 +1,5 @@
+.dummy{}
+
 #button1{
    display: inline-block;
    text-align: center;
@@ -27,14 +29,14 @@ ul li {
     margin: 25px;
     padding: 40px;
     width: 180px;
-    background-color: rgb(255,225,255);
+    background-color: var(--list-element-color);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
     font-weight: bold;
     float: left;
 }
 li:hover{
-    background-color: white;
+    background-color: var(--list-element-hover-color);
 }
 /* horizontally center ul element */
 ul { text-align:center; }
@@ -54,3 +56,15 @@ p{
   margin-left: 40%;
   margin-right: 40%;
 }
+
+.modalDiv {
+  display: none;
+}
+
+.modalDivShow {
+  display: block;
+}
+
+/*.inactive{
+  background-color: grey;
+}*/
