Design und PopUp hinzugefügt

--- a/src/theme.css
+++ b/src/theme.css
@@ -16,4 +16,6 @@ html {
 
     --list-element-color:           #DD142D;
     --list-element-hover-color:     #FF7D74;
+
+    --button-background-color: #dedede;
 }
