--- a/src/app.css
+++ b/src/app.css
@@ -73,6 +73,48 @@
     border: 0;
 }
 
+#app .buttonHover {
+        display: inline-block;
+        border-radius: 4px;
+        background-color: var(--button-background-color);
+        border: none;
+        color:var(--font-color);
+        text-align: center;
+        font-size: 28px;
+        padding: 20px;
+        width: 300px;
+        transition: all 0.5s;
+        cursor: pointer;
+        margin: 5px;
+        position:absolute;
+        top: 80%;
+        left: 40%;
+      }
+      
+#app .buttonHover span {
+        cursor: pointer;
+        display: inline-block;
+        position: relative;
+        transition: 0.5s;
+      }
+      
+#app .buttonHover span:after {
+        content: '\00bb';
+        position: absolute;
+        opacity: 0;
+        top: 0;
+        right: -20px;
+        transition: 0.5s;
+      }
+      
+#app .buttonHover:hover span {
+        padding-right: 25px;
+      }
+      
+#app .buttonHover:hover span:after {
+        opacity: 1;
+        right: 0;
+      }
 /*
  * Hauptinhalt
  */
@@ -86,6 +128,8 @@
         max-width: 80em;
         margin-top: 2em;
         margin-bottom: 2em;
+        margin-left: 2em;
+        margin-right: 2em;
 
         border: 1px solid black;
         /*box-shadow: 1px 1px 1px 1px white;*/
