--- a/src/game-overview/game-overview.css
+++ b/src/game-overview/game-overview.css
@@ -1,23 +1,5 @@
 .dummy{}
 
-#button1{
-   display: inline-block;
-   text-align: center;
-   font-size: 20px;
-   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-   width: 30%;
-   margin-left: 35%;
-   margin-right: 35%;
-   margin-top: 50px;
-   margin-bottom: 10px;
-   padding: 20px;
-   transition: all 0.5s;
-   cursor: pointer;
-   border: 1px;
-   border-radius: 10px;
-   background-color: lightgray;
-}
-
 ul li { 
     /* make list elements fall inline as block elements */
     position: relative;
@@ -57,14 +39,69 @@ p{
   margin-right: 40%;
 }
 
-.modalDiv {
-  display: none;
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-.modalDivShow {
-  display: block;
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
 }
 
-/*.inactive{
-  background-color: grey;
-}*/
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header1 {
+  padding: 2px 16px;
+  background-color: #000066;
+  color:white;
+}
+
+.modal-body {padding: 2px 16px;
+background-color: var(--button-background-color);}
+
+
