Adds new colorscheme to stats apperance, back button, new font color for black scheme and async switchVisibleView

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,5 @@
 html {
-    --font-color:                     black;
+    --font-color:                     white;
     --highlight-background-color:     rgba(235, 235, 235, 1.0);
 
     --header-normal-background-color: black;
