--- a/src/stats/stats.css
+++ b/src/stats/stats.css
@@ -58,7 +58,38 @@
 }
 
 .stats .table-box>div {
-  border: 0.05em solid #DDD;
+  border: 0.05em solid;
+}
+
+.stats div.title {
+  display: flex;
+  width: 100%;
+}
+
+
+.stats div.backButton {
+  padding: 0.1em 0.4em 0.1em 0.3em;
+  margin: 0.5em 1.5em 0.5em 1em;
+  background: #313131;
+  border: 0.1em solid;
+}
+
+.stats div.backButton:hover{
+  background-color: var(--header-active-background-color);
+  cursor: pointer;
+}
+
+.stats div.backButton > a {
+  font-size: 20pt;
+  font-weight: 900;
+}
+
+.stats div.titleName {
+  padding: 0.1em 0.4em 0.1em 0.3em;
+  margin: 0.5em 1.5em 0.5em 1em;
+}
+
+.stats div.titleName> a{
 }
 
 .stats div.table {
@@ -77,7 +108,7 @@
 }
 
 .stats div#gameName.row {
-  background: var(--overview-heading-background-color);
+  background: #313131;
   text-align: center;
   display: inline-block;
   position: relative;
@@ -86,7 +117,7 @@
 }
 
 .stats div#gameName.row:hover {
-  background-color: #bdbdbd;
+  background-color: var(--header-active-background-color);
   cursor: pointer;
 }
 
@@ -112,18 +143,19 @@
   padding-right: 0.3em;
   padding-bottom: 0.3em;
   overflow: hidden;
+  background: #454545;
 }
 
 .stats div.field.win {
   width: 40%;
   padding-left: 0.3em;
-  border-left: 0.1em solid #DDD;
+  border-left: 0.1em solid ;
 }
 
 .stats div.field.lose {
   width: 40%;
   margin-left: 0em;
-  border-left: 0.1em solid #DDD;
+  border-left: 0.1em solid;
 }
 
 .stats div.field.win.lose {
@@ -135,20 +167,24 @@
 .stats div.field.playerName {
   width: 20%;
   position: relative;
-  background: var(--overview-heading-background-color);
+  /* background: #313131; */
+  background: #313131;
 }
 
 .stats div#win-lose.row>div.field.win {
   border-left: 0;
   border-right: 0;
+  background-color: #313131;
 }
 
 .stats div#win-lose.row>div.field.lose {
   border-left: 0;
+  background-color: #313131;
 }
 
 .stats div#win-lose.row>div.field.win.lose {
   border-right: 0;
+  background-color: #313131;
 }
 
 .stats div.row.data>div.field {
@@ -156,7 +192,7 @@
 }
 
 .stats div.field.playerName:hover {
-  background-color: #bdbdbd;
+  background-color: var(--header-active-background-color);
   cursor: pointer;
 }
 
