Changes color of index and app towards the new colorscheme, adds more info to stats pages

--- a/src/stats/stats.css
+++ b/src/stats/stats.css
@@ -47,9 +47,9 @@
   background-color: #E94336;
 }
 
-.stats .row:active .colorstrip,
-.stats .row:focus .colorstrip,
-.stats .row:hover .colorstrip,
+.stats .row#gameName:active .colorstrip,
+.stats .row#gameName:focus .colorstrip,
+.stats .row#gameName:hover .colorstrip,
 .stats .field.playerName:active .colorstrip,
 .stats .field.playerName:focus .colorstrip,
 .stats .field.playerName:hover .colorstrip {
@@ -66,7 +66,6 @@
   width: 100%;
 }
 
-
 .stats div.backButton {
   padding: 0.1em 0.4em 0.1em 0.3em;
   margin: 0.5em 1.5em 0.5em 1em;
@@ -74,12 +73,12 @@
   border: 0.1em solid;
 }
 
-.stats div.backButton:hover{
+.stats div.backButton:hover {
   background-color: var(--header-active-background-color);
   cursor: pointer;
 }
 
-.stats div.backButton > a {
+.stats div.backButton>a {
   font-size: 20pt;
   font-weight: 900;
 }
@@ -89,15 +88,14 @@
   margin: 0.7em 1.5em 0.5em 1em;
 }
 
-.stats div.titleName> a{
-}
+.stats div.titleName>a {}
 
 .stats div.table {
-  display: flex;
+  display: block;
 }
 
 .stats div.table-box {
-  width: 48.5%;
+  width: 97%;
   margin-top: 0.5em;
   margin-left: 1%;
 }
@@ -124,7 +122,6 @@
 .stats div.row {
   display: flex;
   width: 100%;
-
 }
 
 .stats #win-lose>div.win.lose {
@@ -149,7 +146,7 @@
 .stats div.field.win {
   width: 40%;
   padding-left: 0.3em;
-  border-left: 0.1em solid ;
+  border-left: 0.1em solid;
 }
 
 .stats div.field.lose {
@@ -187,6 +184,11 @@
   background-color: #313131;
 }
 
+.stats.player div#win-lose.row>div.sum,
+.stats.game div#win-lose.row>div.sum{
+  background: #313131;
+}
+
 .stats div.row.data>div.field {
   border-top: 0;
 }
@@ -194,6 +196,16 @@
 .stats div.field.playerName:hover {
   background-color: var(--header-active-background-color);
   cursor: pointer;
+}
+
+@media screen and (min-width: 85em) {
+  .stats div.table {
+    display: flex;
+  }
+
+  .stats div.table-box {
+    width: 48.5%;
+  }
 }
 
 .dummy {}
