--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body {
     font-size: 11pt;
     line-height: 1.6;
     color: var(--font-color);
+    background-color: var(--main-background-color);
 }
 
 /*
@@ -67,6 +68,7 @@ body {
         display: flex;
         align-items: stretch;
         justify-content: center;
+        background-color: rgba(0,0,0,0);
     }
 
     body > * {
