--- a/src/game-rounds-overview/game-rounds-overview.css
+++ b/src/game-rounds-overview/game-rounds-overview.css
@@ -1,11 +1,19 @@
-.spielName{
-  display: grid;
-  grid-template-columns:  25% 35% 25%;
-  grid-gap: 10px;
-  align-content: center;
-  padding: 10px;
-  margin-left: 25%;
-  margin-right: 25%;
+ul li {
+    /* make list elements fall inline as block elements */
+    position: relative;
+    display: inline-block;
+    /* next two lines only for display purposes */
+    text-align: center;
+    border:0.2em solid rgb(0, 0, 0);
+    border-radius: 10px;
+    margin: 25px;
+    padding: 40px;
+    width: 180px;
+    background-color: var(--list-element-color);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    font-weight: bold;
+    float: left;
 }
 
 .modal1 {
@@ -20,6 +28,11 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-header1 {
+  background-color: black;
+  text-align: center;
 }
 
 /* Modal Content */
@@ -71,4 +84,21 @@
   float: right;
   font-size: 28px;
   font-weight: bold;
+}
+
+.buttons {
+  background-color: #8B0000;
+  border: solid black 2px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.inputField {
+  background-color: #F08080;
+  margin-left: auto;
+  margin-right: auto;
 }
