--- a/src/round-overview/round-overview.css
+++ b/src/round-overview/round-overview.css
@@ -1,19 +1,58 @@
 .dummy {}
-.tSpieler {
+
+.a{
+    display: -webkit-box;
+    -webkit-box-flex: 100;
+    -webkit-box-orient: vertical;
+    overflow-x: hidden;
+}
+.b{
+    display: -webkit-box;
+    -webkit-box-orient: horizontal;
+    -webkit-box-flex: 100;
+}
+.c{
+    word-wrap: break-word;
+text-align: center;
+margin-top: 2.5em;
+margin-left: 2em;
+-webkit-box-flex: 5;
+font-weight: bold;
+font-size: 25pt;
+}
+.d{
+    -webkit-box-flex: 20;
+    text-align: center;
+    margin-top: 2.5em;
+}
+.e{
+    -webkit-box-flex: 80;
+    margin-top: 0.5em;
+}
+
+.liste {
+    margin-left: 5em;
+    -webkit-box-flex: 100;
     display: grid;
     grid-template-columns:  25% 35% 25%;
     grid-gap: 10px;
     align-content: center;
     padding: 10px;
-    margin-left: 25%;
-    margin-right: 25%;
-    
 }
+
+.marginright{
+    margin-right: 1em;
+    }
+
+.tSpieler{
+    overflow-y: scroll;
+}
+
 .round-overview  .tSpielerColumnName{
     background-color: var(--list-element-color);
     border: 1px solid black;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     border-radius: 5px;
     margin-right: 5px;
     margin-left: 5px;
@@ -22,39 +61,88 @@
     background-color: var(--list-element-color);
     border: 1px solid black;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     border-radius: 5px;
     margin-right: 5px;
     margin-left: 5px;
 }
 .round-overview .tSpielerColumnInput{
-    background-color: rgb(255, 90, 78);
+    background-color: var(--button-background-color);
     text-align: center;
     border-radius: 5px;
     margin-right: 5px;
     margin-left: 5px;
 }
-.round-overview .tSpielerColumnInput>input{
+/*Input Text*/
+.inputFocus{
     height: 95%;
     width: 100%;
-    font-size: 25px;
+    font-size: 15px;
+    color: black;
     border-radius: 5px;
     text-align: center;
-    background-color: rgb(255, 90, 78);
-    border:  rgb(255, 90, 78);
+    background-color: var(--button-background-color);
+    border:  var(--button-background-color);
+}
+.inputFocus:focus{
+    background-color: black;
+    color: white;
 }
 
-.round-overview main > button{
-    background-color: #4CAF50;
+
+#rundeText{
+    margin-bottom: 50px;
+    margin-left: 10px;
+    font-size: 40pt;
+}
+
+/*Button*/
+.border-fade{
     border: none;
-    color: white;
+    color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
+    font-weight: bold;
     display: inline-block;
-    font-size: 16px;
+    font-size: 25px;
     align-content: center;
     border-radius: 12px;
     margin-right: 45%;
-    margin-left: 45%;
+    margin-left: 43%;
+    margin-top: 2em;
+    display: inline-block;
+    background-color: white;
+
+	transition-duration: .3s;
+    transition-property: box-shadow;
+    transform: translateZ(0);
 }
+.border-fade:hover{
+    box-shadow: 
+			inset 0 0 0 4px black,
+			0 0 1px rgba(0, 0, 0, 0); /* Hack to improve aliasing on mobile/tablet devices */
+    }
+    
+/*Scrollbar*/
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+    border: solid 3px transparent;
+  }
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: grey;
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: darkgray; 
+  }
