--- a/src/game-overview/game-overview.css
+++ b/src/game-overview/game-overview.css
@@ -1,6 +1,6 @@
 .dummy{}
 
-ul li { 
+.listElement { 
     /* make list elements fall inline as block elements */
     position: relative;
     display: inline-block;
@@ -8,17 +8,19 @@ ul li {
     text-align: center;
     border:0.2em solid rgb(0, 0, 0);
     border-radius: 10px;
-    margin: 25px;
-    padding: 40px;
+    margin: 20px;
+    margin-top: 45px;
+    padding: 20px;
     width: 150px;
-    background-color: rgb(106, 113, 218);
+    background-color: white;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
     font-weight: bold;
     float: left;
+    height: 11em;
 }
-li:hover{
-    background-color:whitesmoke;
+.listElement:hover{
+  transform: scale(1.15);
 }
 /* horizontally center ul element */
 ul { text-align:center; }
@@ -59,14 +61,13 @@ p{
   position: relative;
   margin: auto;
   padding: 0;
-  border: 1px solid black;
   border-radius: 3em;
   width: 80%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
 }
 
 /* Add Animation */
@@ -82,13 +83,12 @@ p{
 
 /* The Close Button */
 .close {
-  color: white;
-  margin-right: 1%;
-  margin-top: 1%;
+  color: black;
+  margin-left: 97%;
+  margin-top: 10%;
   font-size: 35px;
   font-weight: bold;
 }
-
 .close:hover,
 .close:focus {
   color: #000;
@@ -98,7 +98,7 @@ p{
 
 .modal-header1 {
   padding: 2px 16px;
-  background-color: whitesmoke;
+  background-color: white;
   color: var(--font-color);
   size: 12pt;
   border-top-left-radius: 3em;
@@ -107,7 +107,7 @@ p{
 
 .modal-body {
   width: auto;
-  height: 500px;
+  height: 400px;
   padding: 2px 16px;
   background-color: var(--button-background-color);
   border-bottom-left-radius: 3em;
@@ -117,6 +117,40 @@ p{
   font-size: 25pt;
   text-align: center;
 }
+
+img{
+  margin-top: 15px;
+  height: 170px;
+  width: 130px;
+}
+/* Grow */
+
+.grow {
+	display: inline-block;
+	transition-duration: .1s;
+  transition-property: transform;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+
+#elementDoppelkopf{
+    background-image: url(doppelkopf.jpg);
+    background-position-x: center;
+    background-position-y: bottom;
+    background-repeat: no-repeat;
+    background-size: 170px 220px;
+}
+
+#elementMau-Mau{
+  background-image: url(dragon.png);
+  background-position-x: center;
+  background-position-y: bottom;
+  background-repeat: no-repeat;
+  background-size: 140px 190px;
+}
+
+
 
 
 
