--- a/src/game-rounds-overview/game-rounds-overview.css
+++ b/src/game-rounds-overview/game-rounds-overview.css
@@ -1,20 +1,4 @@
-ul li {
-    /* make list elements fall inline as block elements */
-    position: relative;
-    display: inline-block;
-    /* next two lines only for display purposes */
-    text-align: center;
-    border:0.2em solid rgb(0, 0, 0);
-    border-radius: 10px;
-    margin: 25px;
-    padding: 40px;
-    width: 180px;
-    background-color: var(--list-element-color);
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 20px;
-    font-weight: bold;
-    float: left;
-}
+.dummy {}
 
 .modal1 {
   display: none; /* Hidden by default */
@@ -33,6 +17,7 @@ ul li {
 .modal-header1 {
   background-color: black;
   text-align: center;
+  font-family: fantasy;
 }
 
 /* Modal Content */
@@ -42,7 +27,7 @@ ul li {
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 50%;
+  width: 35%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
@@ -71,7 +56,7 @@ ul li {
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 50%;
+  width: 35%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
@@ -86,7 +71,7 @@ ul li {
   font-weight: bold;
 }
 
-.buttons {
+.htmlButtons {
   background-color: #8B0000;
   border: solid black 2px;
   color: white;
@@ -95,10 +80,82 @@ ul li {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  align-items: center;
+  margin-left: 18%;
+  margin-top: 2%;
+}
+
+.buttonsModal1 {
+  background-color: #8B0000;
+  border: solid black 2px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  align-items: center;
+  margin-top: 2%;
+  margin-left: 20%;
+}
+
+.buttonsModal2 {
+  background-color: #8B0000;
+  border: solid black 2px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  align-items: center;
+  margin-top: 2%;
+  margin-left: 15%;
 }
 
 .inputField {
   background-color: #F08080;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 2%;
+  text-align: center;
+}
+
+.inputFieldSpieleranzahl {
+  background-color: #F08080;
+  margin-left: 25%;
+  width: 15em;
+  text-align: center;
+}
+
+
+table, th, td {
+  margin-top: 2%;
+  border: 1px solid black;
+  align-items: center;
+  margin-left: 19%;
+  background-color: red;
+  height: 4em;
+  width: 50em;
+  font-family: cursive;
+}
+
+.spielerPunkte {
+  font-size: 25px;
+  text-align: center;
+  font-family: fantasy;
+}
+
+.gespielteRunde {
+  text-align: center;
+  font-family: fantasy;
+}
+
+.spielerLabel {
+  margin-right: 5%;
+  margin-left: 25%;
+  margin-bottom: 2%;
+}
+
+.tableHeader {
+  font-size: 1.5em;
+  font-style: normal;
 }
