--- a/src/game-rounds-overview/game-rounds-overview.css
+++ b/src/game-rounds-overview/game-rounds-overview.css
@@ -133,7 +133,7 @@ table, th, td {
   border: 1px solid black;
   align-items: center;
   margin-left: 19%;
-  background-color: red;
+  background-color: #424242;
   height: 4em;
   width: 50em;
   font-family: cursive;
