--- a/src/game-rounds-overview/game-rounds-overview.css
+++ b/src/game-rounds-overview/game-rounds-overview.css
@@ -71,7 +71,7 @@
   font-weight: bold;
 }
 
-.game-rounds-overview .htmlButtons {
+.game-rounds-overview .neuesSpielErstellen {
   background-color: #8B0000;
   border: solid black 2px;
   color: white;
@@ -81,8 +81,21 @@
   display: inline-block;
   font-size: 16px;
   align-items: center;
-  margin-left: 18%;
+  margin-left: 46%;
   margin-top: 2%;
+}
+
+.game-rounds-overview .weiterSpielen {
+  background-color: #8B0000;
+  border: solid black 2px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  align-items: center;
+  margin-left: 5%;
 }
 
 .game-rounds-overview .buttonsModal1 {
