--- a/src/game-overview/game-overview.css
+++ b/src/game-overview/game-overview.css
@@ -15,13 +15,13 @@
     background-color: white;
     background-image: url(defaultImage.jpg);
     background-position-x: center;
-  background-position-y: center;
-  background-repeat: no-repeat;
-  background-size: 150px 150px;
+    background-position-y: center;
+    background-repeat: no-repeat;
+    background-size: 150px 150px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
     font-weight: bold;
-    float: left;
+
     height: 11em;
     color: black;
 }
@@ -31,10 +31,6 @@
 /* horizontally center ul element */
 .game-overview ul { text-align:center; }
 
-.game-overview .lSpiel{
-  width: 98%;
-  margin-left: 2%;
-}
 
 .game-overview p{
   margin-left: 20px;
@@ -42,6 +38,7 @@
 }
 .game-overview .no-data{
   list-style-type: none;
+  color: white;
   width: 20%;
   margin-left: 40%;
   margin-right: 40%;
@@ -145,7 +142,7 @@
 .game-overview #elementDoppelkopf{
     background-image: url(doppelkopf.jpg);
     background-position-y: bottom;
-    background-size: 170px 220px;
+    background-size: 190px 220px;
 }
 
 .game-overview #elementTichu{
@@ -157,17 +154,53 @@
 .game-overview #elementSkat{
   background-image: url(skat.png);
   background-position-y: bottom;
-  background-size: 140px 190px;
+  background-size: 200px 230px;
 }
 
 .game-overview #elementBinokel{
   background-image: url(binokel.png);
   background-position-y: bottom;
-  background-size: 140px 190px;
+  background-size: 180px 180px;
 }
 
 .game-overview span{
   color: #000;
+}
+.game-overview #modalButton{
+  top: 21em;
+}
+
+.game-overview .mainDiv{
+  position:absolute;
+  height: 18em;
+  overflow-x: scroll;
+  white-space: nowrap;
+  width: 64em;
+  margin-left: 2em;
+  margin-right: 5em;
+}
+
+/*Scrollbar*/
+/* width */
+.game-overview ::-webkit-scrollbar {
+  width: 20px;
+  border: solid 3px transparent;
+}
+/* Track */
+.game-overview ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+.game-overview ::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.game-overview  ::-webkit-scrollbar-thumb:hover {
+  background: darkgray; 
 }
 
 
